# CVStudio

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  pyproject.toml
.claude/: settings.local.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  new_operation.md
.github/workflows/: ci.yml
src/cvsandbox/: __init__.py  __main__.py
src/cvsandbox/ai/: __init__.py  cache_storage.py  hf_owlvit.py  ollama_client.py  streaming.py
src/cvsandbox/core/: __init__.py  graph.py  op_docs.py  operation.py  pipeline.py  registry.py  serialization.py
src/cvsandbox/operations/: __init__.py  ai.py  color.py  composite.py  edge.py  filtering.py  geometric.py  morphology.py  threshold.py
src/cvsandbox/resources/: __init__.py
src/cvsandbox/ui/: activity_bar.py  app.py  histogram_panel.py  image_action_bar.py  image_view.py  main_window.py  node_graph_view.py  operation_catalog.py  parameter_panel.py  parameter_widgets.py  pipeline_view.py  viz_pages.py  (+3 more)
src/cvstudio/: __init__.py  __main__.py
tests/: test_registry.py  test_resources.py
tests/ai/: test_cache_storage.py
tests/core/: test_batch.py  test_codegen.py  test_graph.py  test_image_io.py  test_op_docs.py  test_operation.py  test_pipeline.py  test_serialization.py  test_video.py
tests/operations/: test_ai.py  test_analysis.py  test_arithmetic.py  test_color.py  test_composite.py  test_edge.py  test_features.py  test_filtering.py  test_freq.py  test_geometric.py  test_morphology.py  test_segmentation.py  test_stereo.py  test_threshold.py
tests/ui/: conftest.py  test_activity_bar.py  test_code_export_dialog.py  test_dataset_page.py  test_downscale.py  test_help_dialog.py  test_histogram_panel.py  test_image_view.py  test_main_window_settings.py  test_node_graph_view.py  test_operation_catalog.py  test_parameter_panel.py  test_parameter_widgets.py  test_pipeline_view.py  test_pipeline_worker.py  test_video_feed_controller.py  test_visualization_panel.py  test_viz_pages.py
(+42 files in other folders)
